<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login_gradient"
    tools:context=".LoginActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:id="@+id/btnCreateAccount"
        android:layout_marginHorizontal="36dp"
        android:layout_marginBottom="45dp"
        android:background="@drawable/bg_round"
        android:backgroundTint="#48FFFFFF"
        android:elevation="20dp"
        android:fontFamily="@font/sf_pro_text_bold"
        android:text="@string/create_an_account"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/uiOr"
        android:fontFamily="@font/sf_pro_text_medium"
        android:text="@string/or"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/btnCreateAccount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="32dp"
        android:textSize="14sp"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/uiLeftDash"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="16dp"
        android:alpha="0.4"
        android:ellipsize="none"
        android:singleLine="true"
        android:text="@string/dash"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/uiOr"
        app:layout_constraintTop_toTopOf="@id/uiOr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/uiOr"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/uiRightDash"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="36dp"
        android:alpha="0.4"
        android:ellipsize="none"
        android:singleLine="true"
        android:text="@string/dash"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/uiOr"
        app:layout_constraintTop_toTopOf="@id/uiOr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/uiOr"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:id="@+id/btnContinue"
        android:layout_marginHorizontal="36dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/bg_round"
        android:backgroundTint="#78258B"
        android:fontFamily="@font/sf_pro_text_bold"
        android:text="@string/t_continue"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/uiOr"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:id="@+id/etPassword"
        android:layout_marginHorizontal="36dp"
        android:layout_marginBottom="14dp"
        android:background="@drawable/bg_round"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/ic_key"
        android:drawablePadding="18dp"
        android:fontFamily="@font/sf_pro_text_medium"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="#3C3C43"
        android:textColorHint="#DD4A4A50"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/btnContinue"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:id="@+id/etMail"
        android:layout_marginHorizontal="36dp"
        android:layout_marginBottom="14dp"
         android:backgroundTint="@color/white"
        android:background="@drawable/bg_round"
        android:drawableStart="@drawable/ic_user"
        android:drawablePadding="18dp"
        android:fontFamily="@font/sf_pro_text_medium"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        android:textColor="#3C3C43"
        android:textColorHint="#DD4A4A50"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/etPassword"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/uiPleaseLogIn"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/sf_pro_text_heavy"
        android:text="@string/please_log_in"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/etMail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/uiWelcomeBack"
        android:layout_marginBottom="6dp"
        android:fontFamily="@font/sf_pro_text_semibold"
        android:text="@string/welcome_back"
        android:textColor="@color/white"
        android:textSize="19sp"
        app:layout_constraintBottom_toTopOf="@id/uiPleaseLogIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/uiWelcomeBack"
        android:src="@drawable/header_login"/>

</androidx.constraintlayout.widget.ConstraintLayout>










